--- a/OptionParser.csproj
+++ b/OptionParser.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Comparer.cs" />
     <Compile Include="Option.cs" />
     <Compile Include="OptionParser.cs" />
+    <Compile Include="OptionSwitches.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tokenizer.cs" />
   </ItemGroup>
